# restaurant_visits_diary

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
restaurant_visits_project/: mixins.py
restaurant_visits_project/core/: asgi.py  settings.py  urls.py
restaurant_visits_project/v1/: urls.py
restaurant_visits_project/v1/diary/: admin.py  apps.py  models.py  permissions.py  serializers.py  services.py  urls.py  views.py
restaurant_visits_project/v1/diary/migrations/: 0001_initial.py  0002_alter_visit_options_and_more.py
restaurant_visits_project/v1/diary/serializers/: restaurant_serializers.py  visit_serializers.py
restaurant_visits_project/v1/diary/test/: conftest.py  factories.py  mock_test_data.py  test_crypto_view.py  test_restaurant_views.py  test_services.py  test_visit_views.py
restaurant_visits_project/v1/diary/views/: crypto_views.py  restaurant_views.py  visit_views.py
